--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -36,7 +36,7 @@
     }
     input{
       width: 80%;
-      text-indent: 0.5rem;
+      text-indent: ｇ0.5rem;
       border: #121212;
       background-color: white;
       color: white;
