--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,4 +1,4 @@
-.header{
+.header {
   position: fixed;
   left: 0;
   top: 0;
@@ -6,42 +6,43 @@
   height: 56px;
   width: 100%;
   background-color: #202020;
-  a{
+  z-index: 99;
+  a {
     color: white;
     font-size: 1.2rem;
     padding-left: 1rem;
     line-height: 56px;
     text-decoration: none;
   }
-  .item{
-    &:first-child{
+  .item {
+    &:first-child {
       flex-grow: 1;
     }
-    &:last-child{
+    &:last-child {
       flex-grow: 2;
     }
   }
-  form{
+  form {
     width: 50%;
     height: 32px;
     display: flex;
     margin: 12px 0;
-    @media screen and (max-width: 960px){
+    @media screen and (max-width: 960px) {
       width: 420px;
       margin: 1rem 2.5%;
     }
-    @media screen and (max-width: 560px){
+    @media screen and (max-width: 560px) {
       width: 90%;
       margin: 1rem auto;
     }
-    input{
+    input {
       width: 80%;
       text-indent: ｇ0.5rem;
       border: #121212;
       background-color: white;
       color: white;
     }
-    button{
+    button {
       width: 20%;
       background-color: #303030;
       color: white;
