--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -1,13 +1,17 @@
-.wrapper{
-  min-height: 100vh;
+.wrapper {
   display: flex;
   flex-direction: column;
   background: #181818;
-  .main{
+  .main {
     padding-top: 56px;
     display: flex;
     flex: 1;
     width: 100%;
     background: #181818;
+    @media screen and (max-width: 960px) {
+      max-width: 90%;
+      margin: 0 auto;
+      flex-direction: column;
+    }
   }
 }
